@startuml
'https://plantuml.com/class-diagram
left to right direction

package scrappers {

abstract class Scrapper {
    # int getHTTPStatusCode(String url)
}

package articleScrappers {

    abstract class ArticleScrapper {
        - journalPrefixList : String[]
        + ArticleScrapper(String[] journalPrefixList)
        + boolean isCorrectJournalScrapper(String DOI)
        + {abstract} ArticleInfo getArticleInfoFromDOI(String DOI)
    }

    abstract class JSOUPArticleScrapper {
        + JSOUPArticleScrapper(String[] journalPrefixList)
        # Document getHtmlDocument(String url)
    }
    class ACMArticleScrapper {
        + ACMArticleScrapper(String[] journalPrefixList)
        + ArticleInfo getArticleInfoFromDOI(String DOI)
    }
    class ElsevierArticleScrapper {
        + ElsevierArticleScrapper(String[] journalPrefixList)
        - String forgeRedirectUrl(String DOI)
        + ArticleInfo getArticleInfoFromDOI(String DOI)
    }
    class ScienceArticleScrapper {
        + ScienceArticleScrapper(String[] journalPrefixList)
        + ArticleInfo getArticleInfoFromDOI(String DOI)
    }
    class SpringerArticleScrapper {
        + SpringerArticleScrapper(String[] journalPrefixList)
        + ArticleInfo getArticleInfoFromDOI(String DOI)
    }

    abstract class PhantomArticleScrapper {
        + PhantomArticleScrapper(String[] journalPrefixList)
        # PhantomJSDriver getPhantomDriver()
    }
    class IEEEArticleScrapper {
         + IEEEArticleScrapper(String[] journalPrefixList)
         + ArticleInfo getArticleInfoFromDOI(String DOI)
    }

    ArticleScrapper <|-left- JSOUPArticleScrapper
    JSOUPArticleScrapper <|-left- ACMArticleScrapper
    JSOUPArticleScrapper <|-- ElsevierArticleScrapper
    JSOUPArticleScrapper <|-- ScienceArticleScrapper
    JSOUPArticleScrapper <|-- SpringerArticleScrapper
    ArticleScrapper <|-right- PhantomArticleScrapper
    PhantomArticleScrapper <|-right- IEEEArticleScrapper
}

Scrapper <|-- ArticleScrapper

}

@enduml